--- a/.classpath
+++ b/.classpath
@@ -10,5 +10,7 @@
 	<classpathentry exported="true" kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="C:/Program Files/Java/mysql-connector-java-6.0.5/mysql-connector-java-6.0.5/mysql-connector-java-6.0.5-bin.jar"/>
+	<classpathentry kind="lib" path="C:/Users/skind/Downloads/commons-io-2.5-bin/commons-io-2.5/commons-io-2.5.jar"/>
+	<classpathentry kind="lib" path="C:/Users/skind/Downloads/commons-fileupload-1.3.2-bin/commons-fileupload-1.3.2-bin/lib/commons-fileupload-1.3.2.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
