--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -16,12 +16,12 @@
     <error-code>500</error-code>
     <location>/ErrorPage.jsp</location>
   </error-page>
-  <servlet>
+ <!--  <servlet>
     <servlet-name>FileUploadController</servlet-name>
-    <servlet-class>voting/FileUploadController</servlet-class>
+    <servlet-class>voting/candidateFormController</servlet-class>
   </servlet>
   <servlet-mapping>
     <servlet-name>FileUploadController</servlet-name>
     <url-pattern>/upload.jsp</url-pattern>
-  </servlet-mapping>
+  </servlet-mapping> -->
 </web-app>
